@@ -46,6 +46,8 @@
 	$lang:$lang/debi.$lang.1 add_$lang:?add_$lang/translator_man.add
 [type:man] ../scripts/debpkg.1 \
 	$lang:$lang/debpkg.$lang.1 add_$lang:?add_$lang/translator_man.add
+[type:man] ../scripts/debrepro.1 \
+	$lang:$lang/debrepro.$lang.1 add_$lang:?add_$lang/translator_man.add
 [type:man] ../scripts/debrelease.1 \
 	$lang:$lang/debrelease.$lang.1 add_$lang:?add_$lang/translator_man.add
 [type:docbook] ../scripts/deb-reversion.dbk \
