@@ -1,8 +1,13 @@
 devscripts (2.16.8) UNRELEASED; urgency=medium
 
+  [ Paul Wise ]
   * Add some more Debian development & QA tools to Suggests:
     adequate autopkgtest bls-standalone check-all-the-things
     duck how-can-i-help piuparts ratt
+
+  [ Antonio Terceiro ]
+  * New script: debrepro, a simple reproducibility tester specific for Debian
+    packages.
 
  -- Paul Wise <pabs@debian.org>  Sat, 27 Aug 2016 13:58:14 +0800
 
